app/sg.tf
resource "aws_security_group" "sg_public_rds" {
  name   = "${local.env_prefix}-pg-sg"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = var.rds_authorized_ips
  }

  egress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Env = local.env_prefix
  }
}
